Fix: Aligned accessibility icon

--- a/cd2024bfs2g1-frontend/src/main/ngx/src/app/main/routes/routes-home/routes-home.component.css
+++ b/cd2024bfs2g1-frontend/src/main/ngx/src/app/main/routes/routes-home/routes-home.component.css
@@ -476,8 +476,4 @@
   visibility: hidden !important;
 }
 
-.titleIcon{
 
-
-
-}
